fix: footer alignment

--- a/client/app/styles/globals.css
+++ b/client/app/styles/globals.css
@@ -18,10 +18,12 @@ fieldset {
   margin: 0;
 }
 
-body,
 html {
+  min-height: 100vh;
+}
+
+body {
   position: relative;
   margin: 0 auto;
-  min-width: 100%;
-  min-height: 100%;
+  padding: 0;
 }
